<!-- res/layout/activity_login.xml -->
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center">

        <TextView
            android:id="@+id/tvRegisterTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="24sp"
            android:textColor="@color/primaryTextColor"
            android:fontFamily="sans-serif-medium"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nama"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:backgroundTint="@color/editTextBackgroundTint"
            android:textColor="@color/primaryTextColor"
            android:layout_marginBottom="12dp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:backgroundTint="@color/editTextBackgroundTint"
            android:textColor="@color/primaryTextColor"
            android:layout_marginBottom="12dp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:backgroundTint="@color/editTextBackgroundTint"
            android:textColor="@color/primaryTextColor"
            android:layout_marginBottom="24dp" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/white"
            android:backgroundTint="@color/buttonColor"
            android:fontFamily="sans-serif-medium"
            android:padding="12dp"
            android:layout_marginBottom="12dp" />

        <TextView
            android:id="@+id/btnGoToLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_to_register"
            android:textColor="@color/blue"
            android:textSize="14sp"
            android:fontFamily="sans-serif"
            android:layout_marginTop="8dp" />


    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="16dp"
        android:indeterminate="true"
        android:layout_gravity="center" />

</FrameLayout>
